Fixed bugs with alignment. Added example content.

--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,23 @@
 :root {
   --margin: 5px;
-  --pane-basis: calc( 10vw - (var(--margin) * 5));
-  --pane-size: var(--pane-basis);
-  --two-pane-size: calc(var(--pane-basis) * 2 + var(--margin));
+  --border: 2px;
+  --pane-basis: calc( 15vw - (var(--margin) * 5));
+  --pane-size: calc(var(--pane-basis) - var(--border) * 2);
+  --two-pane-size: calc(var(--pane-basis) * 2 + var(--margin) - var(--border) * 2);
+  --three-pane-size: calc(var(--pane-basis) * 3 + 2 *var(--margin) - var(--border) * 2);
+  --four-pane-size: calc(var(--pane-basis) * 4 + 3 *var(--margin) - var(--border) * 2);
+  --border: 2px;
 }
 
 html {
   background-color:#0f0f0f;
   color: #fffffa;
+}
+
+img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .header {
@@ -29,30 +39,56 @@ html {
   gap: var(--margin);
 }
 
+.subContainer1x3{
+  width: calc(var(--pane-size) + 2 * var(--border));
+  height: calc(var(--three-pane-size) + 2 * var(--border));
+}
+
 .subContainer2x2{
-  width: var(--two-pane-size);
-  height: var(--two-pane-size);
+  width: calc(var(--two-pane-size) + 2 * var(--border));
+  height: calc(var(--two-pane-size) + 2 * var(--border));
+}
+
+.subContainer2x3{
+  width: calc(var(--two-pane-size) + 2 * var(--border));
+  height: calc(var(--three-pane-size) + 2 * var(--border));
+}
+
+.subContainer3x3{
+  width: calc(var(--three-pane-size) + 2 * var(--border));
+  height: calc(var(--three-pane-size) + 2 * var(--border));
+}
+
+.subContainer1x4{
+  width: calc(var(--pane-size) + 2 * var(--border));
+  height: calc(var(--four-pane-size) + 2 * var(--border));
+}
+
+.subContainer4x4{
+  width: calc(var(--four-pane-size) + 2 * var(--border));
+  height: calc(var(--four-pane-size) + 2 * var(--border));
 }
 
 .pane {
   display: inline-block;
-  flex-shrink: 0.9;
+  /*background-color: white;*/
+  border-style: solid;
+  border-color: white;
+  border-width: var(--border);
+  overflow: hidden;
 }
 
 .pane1x1 {
-  background-color: red;
   width: var(--pane-size);
   height: var(--pane-size);
 }
 
 .pane2x2 {
-  background-color: red;
   width: var(--two-pane-size);
   height: var(--two-pane-size);
 }
 
 .pane2x1 {
-  background-color: red;
   width: var(--two-pane-size);
   height: var(--pane-size);
 }
